fixed a problem with background only half completing during dark mode

--- a/client/web/styles.css
+++ b/client/web/styles.css
@@ -7,7 +7,6 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: #ffffff;
 }
 
 img {
